--- a/style.css
+++ b/style.css
@@ -8,25 +8,23 @@
     gap: 25px;
     background:rgba(179, 233, 247, 0.250);
 }
-.book-one{
-
-    grid-column: 1/3;
+.new-book{
+    position: absolute;
+    top: 20rem;
+    width: 250px;
+    height: 250px;
+    left: 12rem;
+    border: 2px solid black;
+    z-index: 10;
 }
-.book-two{
-    grid-column: 2/3;
-    
-}
 
-
-.book-one,
-.book-two,
-.book-three,
-.book-four{
+.book-info{
     margin: auto;
     background-color: rgb(251, 255, 188);
 }
+
 .background-container{
-    border: 3px solid black;
+    border: 10px solid black;
     width: 100%;
     height: 100vh;
     
@@ -40,17 +38,15 @@
 }
 .display-book-grid > div{
     display: grid;
-
+    
+    text-align: center;
     border: 1px solid black;
     border-radius: 5%;
 }
 .display-book-grid > div > div{
-    
-    margin: auto;
-    
-    border: 1px solid black;
+    padding: 5px;
     width: 250px;
-    height: 25px;
+   
 
 }
 
@@ -64,6 +60,7 @@
     right:50%;
     margin:auto;
     background-color:rgb(254, 255, 183);
+    z-index: 100;
 
 }
 
