--- a/style.css
+++ b/style.css
@@ -3,19 +3,35 @@
 
 }
 .container{
-    display: grid;
-    grid-template-columns: 2;
+    
     gap: 25px;
     background:rgba(179, 233, 247, 0.250);
 }
-.new-book{
+
+.collection{
+    
     position: absolute;
-    top: 20rem;
-    width: 250px;
-    height: 250px;
-    left: 12rem;
-    border: 2px solid black;
+    width: 100%;
+    height: 100%;
+    border: 1px solid black;
+    gap: 15px;
+    
+}
+.cDiv{
+    position: absolute;
     z-index: 10;
+}
+
+.new-book{
+    justify-content: center;
+    margin: 25px;
+    position: relative;
+    float: left;
+    width: 8rem;
+    height: 8rem;
+    border: 1px solid black;
+    z-index: 7;
+    background-color: rgb(0, 194, 178, 0.5);
 }
 
 .book-info{
@@ -32,8 +48,8 @@
 .display-book-grid{
     border: 5px solid black;
     display: grid;
-    width: 75%;
-    height: 75%;
+    width: 100%;
+    height: 100%;
     margin: auto;
 }
 .display-book-grid > div{
