--- a/style.css
+++ b/style.css
@@ -3,26 +3,26 @@
 
 }
 .container{
-    
+    width: 100%;
+    height: 100%;
     gap: 25px;
     background:rgba(179, 233, 247, 0.250);
 }
 
 .collection{
-    
-    position: absolute;
     width: 100%;
     height: 100%;
     border: 1px solid black;
     gap: 15px;
     
 }
-.cDiv{
-    position: absolute;
-    z-index: 10;
+
+.title-div{
+    border: 2px solid black;
 }
 
 .new-book{
+    text-align: center;
     justify-content: center;
     margin: 25px;
     position: relative;
@@ -33,10 +33,17 @@
     z-index: 7;
     background-color: rgb(0, 194, 178, 0.5);
 }
+.new-book > div {
+    margin: 0.4rem;
+    padding: 0.4rem;
+}
 
 .book-info{
     margin: auto;
+    width: 100%;
+    height: 100%;
     background-color: rgb(251, 255, 188);
+    border: 5px solid red;
 }
 
 .background-container{
@@ -52,13 +59,13 @@
     height: 100%;
     margin: auto;
 }
-.display-book-grid > div{
+/*.display-book-grid > div{
     display: grid;
     
     text-align: center;
     border: 1px solid black;
     border-radius: 5%;
-}
+}*/
 .display-book-grid > div > div{
     padding: 5px;
     width: 250px;
