--- a/style.css
+++ b/style.css
@@ -38,6 +38,14 @@
     padding: 0.4rem;
 }
 
+.new-book > button {
+    position: relative;
+    bottom: 7rem;
+    right: 7rem;
+    width: 1rem;
+    height: 1rem;
+}
+
 .book-info{
     margin: auto;
     width: 100%;
