--- a/style.css
+++ b/style.css
@@ -38,6 +38,12 @@
     padding: 0.4rem;
 }
 
+.read{
+    opacity: 0.5;
+    background: rgb(135,133,52);
+    background: linear-gradient(90deg, rgba(135,133,52,0.3) 0%, rgba(162,135,101,0.3) 76%, rgba(134,118,67,0.3) 100%);
+}
+
 .new-book > button {
     position: relative;
     bottom: 7rem;
@@ -50,7 +56,7 @@
     margin: auto;
     width: 100%;
     height: 100%;
-    background-color: rgb(251, 255, 188);
+    background-color: rgb(196, 197, 185);
     border: 5px solid red;
 }
 
