--- a/style.css
+++ b/style.css
@@ -2,11 +2,33 @@
     margin: 0px;
 
 }
+.popout {
+    animation: popout 0.1s ease;
+    -webkit-animation: popout 0.1s ease;
+}
+@keyframes popout {
+    from{transform:scale(0)}
+    80%{transform:scale(0.5)}
+    to{transform:scale(1)}
+}
+@-webkit-keyframes popout {
+    from{-webkit-transform:scale(0)}
+    80%{-webkit-transform:scale(0.5)}
+    to{-webkit-transform:scale(1)}
+}
+
+
 .container{
     width: 100%;
     height: 100%;
     gap: 25px;
     background:rgba(179, 233, 247, 0.250);
+}
+
+.top-banner{
+    height: 10rem;
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+    z-index: 8;
 }
 
 .collection{
@@ -17,21 +39,35 @@
     
 }
 
-.title-div{
-    border: 2px solid black;
+.titleDiv{
+    font-weight: bold;
+    font-size: larger;
+    font-style: italic;
+    border-bottom: 2px solid black;
+    color: rgb(255, 255, 255);
+    text-align: center;
+}
+.authorDiv{
+    text-align: left;
+    color: rgb(255, 255, 255);
+}
+.pagesDiv{
+    text-align: left;
+    color: rgb(255, 255, 255);
 }
 
 .new-book{
+    border-radius: 3%;
     text-align: center;
     justify-content: center;
     margin: 25px;
     position: relative;
     float: left;
-    width: 8rem;
-    height: 8rem;
+    min-width: 20rem;
+    height: 10rem;
     border: 1px solid black;
     z-index: 7;
-    background-color: rgb(0, 194, 178, 0.5);
+    background-color: rgba(0, 123, 206, 3);    
 }
 .new-book > div {
     margin: 0.4rem;
@@ -44,61 +80,84 @@
     background: linear-gradient(90deg, rgba(135,133,52,0.3) 0%, rgba(162,135,101,0.3) 76%, rgba(134,118,67,0.3) 100%);
 }
 
-.new-book > button {
-    position: relative;
-    bottom: 7rem;
-    right: 7rem;
+
+.buttonExit{
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    border-radius: 50%;
+    border-style: none;
     width: 1rem;
     height: 1rem;
+    background-image: url("/images/logo/icons8-close-40.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    background-position: center;
+
+}
+
+
+.new-book > button:hover{
+    border: 1px solid rgb(255, 255, 255);
+    
+
 }
 
 .book-info{
-    margin: auto;
     width: 100%;
     height: 100%;
-    background-color: rgb(196, 197, 185);
-    border: 5px solid red;
+    background-color: rgb(255, 255, 255);
+    
 }
 
+
 .background-container{
-    border: 10px solid black;
     width: 100%;
     height: 100vh;
     
 }   
 .display-book-grid{
-    border: 5px solid black;
-    display: grid;
     width: 100%;
     height: 100%;
-    margin: auto;
 }
-/*.display-book-grid > div{
-    display: grid;
-    
-    text-align: center;
-    border: 1px solid black;
-    border-radius: 5%;
-}*/
+
 .display-book-grid > div > div{
     padding: 5px;
-    width: 250px;
-   
-
-}
+    width: 7.5rem;
+   }
 
 
 .popup-form{
     position: absolute;
     border: 1px solid black;
     width: 285px;
-    top: 25%;
+    top: 50%;
     height: 225px;
     right:50%;
     margin:auto;
-    background-color:rgb(254, 255, 183);
+    background-color:rgba(63, 107, 201, 0.418);
     z-index: 100;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    
+}
 
+ .btnSubmit{
+    
+    border-radius: 50%;
+    background-image: url("/images/logo/icons8-upload-40.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    border-style: none;
+    background-size: 100%;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+.btnSubmit:hover{
+    background-image: url("/images/logo/icons8-upload.gif");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+    opacity: 0.5;
 }
 
 .btnSubmit{
@@ -116,16 +175,28 @@
 
 .btnToggle{
     position: absolute;
-    left: 1rem;
     bottom: 25px;
     margin-left: 60%;
-    width: 90px;
-    height: 90px;
-    background-color: aquamarine;
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
+    background-image: url(/images/logo/icons8-add-40.png);
+    background-repeat: no-repeat;
+    background-position: center;   
+    border-style: none;
+    background-color: rgba(18, 97, 243, 0);
     
 }
 
-/* red :rgb(100, 12, 12)
+.btnToggle:hover{
+    background-image: url(/images/logo/icons8-add.gif);
+    background-position: center;
+    background-size: 110%;
+    background-repeat: no-repeat;
+    background-color: rgba(18, 97, 243, 0);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+    /* red :rgb(100, 12, 12)
    light-brown: rgb(100, 12, 12);
    very-light-brown: rgb(100, 12, 12);
    light-grey: rgba(199, 234, 243, 0.712);
